--- a/Ecommerce.API/appsettings.Development.json
+++ b/Ecommerce.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DatabaseConnection": "Host=localhost;Port=5432;Database=ecommerce-demo;Username=postgres;Password=postgres"
   }
+
 }
