--- a/Ecommerce.API/Ecommerce.API.csproj
+++ b/Ecommerce.API/Ecommerce.API.csproj
@@ -4,9 +4,13 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<OpenApiDocumentsDirectory>$(MSBuildProjectDirectory)</OpenApiDocumentsDirectory>
+	<OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
   </PropertyGroup>
 
+
   <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.1.1" />
   </ItemGroup>
