--- a/Ecommerce.Application/Ecommerce.Application.csproj
+++ b/Ecommerce.Application/Ecommerce.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ecommerce.API.Common\Ecommerce.API.Common.csproj" />
     <ProjectReference Include="..\Ecommerce.API.Contracts\Ecommerce.API.Contracts.csproj" />
     <ProjectReference Include="..\Ecommerce.Domain\Ecommerce.Domain.csproj" />
   </ItemGroup>
